Fixed tlsf to correctly allocate the # of slots for small allocation sizes. Added realloc test cases.

--- a/src/Makefile.tmpl
+++ b/src/Makefile.tmpl
@@ -183,7 +183,7 @@ AIFLAGS= $(ICOMMON)
 #	-D_POSIX_C_SOURCE=200112L -D_XOPEN_SOURCE=600
 
 # Compile for debugging and profiling
-DBG_DEFS= -DCAT_USE_INLINE=0 -DCAT_HAS_LONGLONG=1 
+DBG_DEFS= -DCAT_USE_INLINE=0 -DCAT_HAS_LONGLONG=1 -DCAT_DEBUG_LEVEL=1
 DBG_CFLAGS= -Wall -g -pg $(DBG_DEFS)
 DBG_IFLAGS= $(ICOMMON)
 
