Added processor-specific bit operations for ilog2, nlz, ntz, pop, both 32- and 64-bit versions.

--- a/src/Makefile.tmpl
+++ b/src/Makefile.tmpl
@@ -168,8 +168,8 @@ IFLAGS= $(ICOMMON)
 
 # Choose one option from the next two for libcata
 # Option 1: ANSI compliant
-ADEFS= -DCAT_USE_INLINE=0 -DCAT_HAS_LONGLONG=0 -D_POSIX_C_SOURCE=200112L \
-	-D_BSD_SOURCE
+ADEFS= -DCAT_USE_INLINE=0 -DCAT_ANSI89=1 -DCAT_HAS_LONGLONG=0 \
+	-D_POSIX_C_SOURCE=200112L -D_BSD_SOURCE
 #	 -D_POSIX_C_SOURCE=200112L -D_XOPEN_SOURCE=600
 ACFLAGS= -Wall -ansi -pedantic $(ADEFS)
 AIFLAGS= $(ICOMMON)
