+ add lexical analyzer and test case and adjust makefiles

--- a/src/Makefile.tmpl
+++ b/src/Makefile.tmpl
@@ -2,7 +2,7 @@ CFILES=	cat.c aux.c err.c cb.c grow.c io.c mem.c net.c pack.c ring.c pcache.c \
 	uevent.c raw.c match.c csv.c stduse.c stdcsv.c graph.c shell.c \
 	str.c dbgmem.c emit.c emit_format.c emit_file.c emalloc.c catstr.c \
 	bitops.c list.c hash.c avl.c heap.c dlist.c pool.c rbtree.c time.c \
-	splay.c bitset.c catstdlib.c catstdio.c pspawn.c dynmem.c
+	splay.c bitset.c catstdlib.c catstdio.c pspawn.c dynmem.c lex.c
 
 LCATODIR=  ../obj/libcat
 LCATOF= $(LCATODIR)/cat.o \
@@ -33,7 +33,8 @@ LCATOF= $(LCATODIR)/cat.o \
 	$(LCATODIR)/catstr.o  \
 	$(LCATODIR)/bitops.o \
 	$(LCATODIR)/pspawn.o \
-	$(LCATODIR)/dynmem.o 
+	$(LCATODIR)/dynmem.o \
+	$(LCATODIR)/lex.o 
 
 LCATAODIR=  ../obj/libcata
 LCATAOF=$(LCATAODIR)/cat.o \
@@ -75,7 +76,8 @@ LCATAOF=$(LCATAODIR)/cat.o \
 	$(LCATAODIR)/splay.o \
 	$(LCATAODIR)/bitset.o \
 	$(LCATAODIR)/pspawn.o \
-	$(LCATAODIR)/dynmem.o
+	$(LCATAODIR)/dynmem.o \
+	$(LCATAODIR)/lex.o
 
 
 LCAT_DBG_ODIR= ../obj/libcat_dbg
@@ -118,7 +120,8 @@ LCAT_DBG_OF=$(LCAT_DBG_ODIR)/cat.o \
 	$(LCAT_DBG_ODIR)/splay.o \
 	$(LCAT_DBG_ODIR)/bitset.o \
 	$(LCAT_DBG_ODIR)/pspawn.o \
-	$(LCAT_DBG_ODIR)/dynmem.o
+	$(LCAT_DBG_ODIR)/dynmem.o \
+	$(LCAT_DBG_ODIR)/lex.o
 	
 
 LCAT_NO_LIBC_ODIR=  ../obj/libcat_nolibc
@@ -157,7 +160,8 @@ LCAT_NO_LIBC_OF= \
 	$(LCAT_NO_LIBC_ODIR)/time.o \
 	$(LCAT_NO_LIBC_ODIR)/splay.o \
 	$(LCAT_NO_LIBC_ODIR)/stduse.o \
-	$(LCAT_NO_LIBC_ODIR)/dynmem.o 
+	$(LCAT_NO_LIBC_ODIR)/dynmem.o \
+	$(LCAT_NO_LIBC_ODIR)/lex.o 
 
 ICOMMON=$(ISYSTEM) -I../include
 
@@ -168,8 +172,7 @@ IFLAGS= $(ICOMMON)
 
 # Choose one option from the next two for libcata
 # Option 1: ANSI compliant
-ADEFS= -DCAT_USE_INLINE=0 -DCAT_ANSI89=1 -DCAT_HAS_LONGLONG=0 \
-	-D_POSIX_C_SOURCE=200112L -D_BSD_SOURCE
+ADEFS= -DCAT_USE_INLINE=0 -DCAT_ANSI89=1 -DCAT_HAS_LONGLONG=0 -D_BSD_SOURCE
 #	 -D_POSIX_C_SOURCE=200112L -D_XOPEN_SOURCE=600
 ACFLAGS= -Wall -ansi -pedantic $(ADEFS)
 AIFLAGS= $(ICOMMON)
