--- a/src/Makefile.tmpl
+++ b/src/Makefile.tmpl
@@ -2,7 +2,8 @@ CFILES=	cat.c aux.c err.c cb.c grow.c io.c mem.c net.c pack.c ring.c pcache.c \
 	uevent.c raw.c match.c csv.c stduse.c stdcsv.c graph.c shell.c \
 	str.c dbgmem.c emit.c emit_format.c emit_file.c emalloc.c catstr.c \
 	bitops.c list.c hash.c avl.c heap.c dlist.c pool.c rbtree.c time.c \
-	splay.c bitset.c catstdlib.c catstdio.c pspawn.c dynmem.c lex.c sort.c
+	splay.c bitset.c catstdlib.c catstdio.c pspawn.c dynmem.c lex.c sort.c \
+	optparse.c
 
 LCATODIR=  ../obj/libcat
 LCATOF= $(LCATODIR)/cat.o \
@@ -35,7 +36,8 @@ LCATOF= $(LCATODIR)/cat.o \
 	$(LCATODIR)/pspawn.o \
 	$(LCATODIR)/dynmem.o \
 	$(LCATODIR)/lex.o  \
-	$(LCATODIR)/sort.o 
+	$(LCATODIR)/sort.o \
+	$(LCATODIR)/optparse.o
 
 
 LCATAODIR=  ../obj/libcata
@@ -80,7 +82,8 @@ LCATAOF=$(LCATAODIR)/cat.o \
 	$(LCATAODIR)/pspawn.o \
 	$(LCATAODIR)/dynmem.o \
 	$(LCATAODIR)/lex.o \
-	$(LCATAODIR)/sort.o
+	$(LCATAODIR)/sort.o \
+	$(LCATAODIR)/optparse.o
 
 
 LCAT_DBG_ODIR= ../obj/libcat_dbg
@@ -125,7 +128,8 @@ LCAT_DBG_OF=$(LCAT_DBG_ODIR)/cat.o \
 	$(LCAT_DBG_ODIR)/pspawn.o \
 	$(LCAT_DBG_ODIR)/dynmem.o \
 	$(LCAT_DBG_ODIR)/lex.o \
-	$(LCAT_DBG_ODIR)/sort.o
+	$(LCAT_DBG_ODIR)/sort.o \
+	$(LCAT_DBG_ODIR)/optparse.o
 	
 
 LCAT_NO_LIBC_ODIR=  ../obj/libcat_nolibc
@@ -166,7 +170,8 @@ LCAT_NO_LIBC_OF= \
 	$(LCAT_NO_LIBC_ODIR)/stduse.o \
 	$(LCAT_NO_LIBC_ODIR)/dynmem.o \
 	$(LCAT_NO_LIBC_ODIR)/lex.o \
-	$(LCAT_NO_LIBC_ODIR)/sort.o 
+	$(LCAT_NO_LIBC_ODIR)/sort.o \
+	$(LCAT_NO_LIBC_ODIR)/optparse.o
 
 ICOMMON=$(ISYSTEM) -I../include
 
