--- a/src/Makefile.tmpl
+++ b/src/Makefile.tmpl
@@ -1,6 +1,6 @@
 CFILES=	cat.c aux.c err.c cb.c grow.c io.c mem.c net.c pack.c ring.c pcache.c \
 	uevent.c raw.c match.c csv.c stduse.c stdcsv.c graph.c shell.c \
-	str.c dbgmem.c emit.c emit_format.c emit_file.c emalloc.c catstr.c \
+	str.c dbgmem.c emit.c emit_format.c stdemit.c emalloc.c catstr.c \
 	bitops.c list.c hash.c avl.c heap.c dlist.c pool.c rbtree.c time.c \
 	splay.c bitset.c catstdlib.c catstdio.c pspawn.c dynmem.c lex.c sort.c \
 	optparse.c
@@ -29,7 +29,7 @@ LCATOF= $(LCATODIR)/cat.o \
 	$(LCATODIR)/dbgmem.o  \
 	$(LCATODIR)/emit.o  \
 	$(LCATODIR)/emit_format.o  \
-	$(LCATODIR)/emit_file.o  \
+	$(LCATODIR)/stdemit.o  \
 	$(LCATODIR)/emalloc.o  \
 	$(LCATODIR)/catstr.o  \
 	$(LCATODIR)/bitops.o \
@@ -64,7 +64,7 @@ LCATAOF=$(LCATAODIR)/cat.o \
 	$(LCATAODIR)/dbgmem.o  \
 	$(LCATAODIR)/emit.o  \
 	$(LCATAODIR)/emit_format.o  \
-	$(LCATAODIR)/emit_file.o  \
+	$(LCATAODIR)/stdemit.o  \
 	$(LCATAODIR)/emalloc.o  \
 	$(LCATAODIR)/catstr.o  \
 	$(LCATAODIR)/bitset.o  \
@@ -110,7 +110,7 @@ LCAT_DBG_OF=$(LCAT_DBG_ODIR)/cat.o \
 	$(LCAT_DBG_ODIR)/dbgmem.o  \
 	$(LCAT_DBG_ODIR)/emit.o  \
 	$(LCAT_DBG_ODIR)/emit_format.o  \
-	$(LCAT_DBG_ODIR)/emit_file.o  \
+	$(LCAT_DBG_ODIR)/stdemit.o  \
 	$(LCAT_DBG_ODIR)/emalloc.o  \
 	$(LCAT_DBG_ODIR)/catstr.o  \
 	$(LCAT_DBG_ODIR)/bitset.o  \
@@ -154,7 +154,7 @@ LCAT_NO_LIBC_OF= \
 	$(LCAT_NO_LIBC_ODIR)/dbgmem.o  \
 	$(LCAT_NO_LIBC_ODIR)/emit.o  \
 	$(LCAT_NO_LIBC_ODIR)/emit_format.o  \
-	$(LCAT_NO_LIBC_ODIR)/emit_file.o  \
+	$(LCAT_NO_LIBC_ODIR)/stdemit.o  \
 	$(LCAT_NO_LIBC_ODIR)/emalloc.o  \
 	$(LCAT_NO_LIBC_ODIR)/catstr.o  \
 	$(LCAT_NO_LIBC_ODIR)/bitset.o  \
