--- a/src/Makefile.tmpl
+++ b/src/Makefile.tmpl
@@ -1,9 +1,9 @@
 CFILES=	cat.c aux.c err.c cb.c grow.c io.c mem.c net.c pack.c ring.c pcache.c \
 	uevent.c raw.c match.c csv.c stduse.c stdcsv.c graph.c shell.c \
-	str.c dbgmem.c emit.c emit_format.c stdemit.c emalloc.c catstr.c \
+	str.c dbgmem.c emit.c emit_format.c stdclio.c emalloc.c catstr.c \
 	bitops.c list.c hash.c avl.c heap.c dlist.c pool.c rbtree.c time.c \
 	splay.c bitset.c catstdlib.c catstdio.c pspawn.c dynmem.c lex.c sort.c \
-	optparse.c
+	optparse.c charport.c
 
 LCATODIR=  ../obj/libcat
 LCATOF= $(LCATODIR)/cat.o \
@@ -29,7 +29,7 @@ LCATOF= $(LCATODIR)/cat.o \
 	$(LCATODIR)/dbgmem.o  \
 	$(LCATODIR)/emit.o  \
 	$(LCATODIR)/emit_format.o  \
-	$(LCATODIR)/stdemit.o  \
+	$(LCATODIR)/stdclio.o  \
 	$(LCATODIR)/emalloc.o  \
 	$(LCATODIR)/catstr.o  \
 	$(LCATODIR)/bitops.o \
@@ -37,7 +37,8 @@ LCATOF= $(LCATODIR)/cat.o \
 	$(LCATODIR)/dynmem.o \
 	$(LCATODIR)/lex.o  \
 	$(LCATODIR)/sort.o \
-	$(LCATODIR)/optparse.o
+	$(LCATODIR)/optparse.o \
+	$(LCATODIR)/charport.o 
 
 
 LCATAODIR=  ../obj/libcata
@@ -64,7 +65,7 @@ LCATAOF=$(LCATAODIR)/cat.o \
 	$(LCATAODIR)/dbgmem.o  \
 	$(LCATAODIR)/emit.o  \
 	$(LCATAODIR)/emit_format.o  \
-	$(LCATAODIR)/stdemit.o  \
+	$(LCATAODIR)/stdclio.o  \
 	$(LCATAODIR)/emalloc.o  \
 	$(LCATAODIR)/catstr.o  \
 	$(LCATAODIR)/bitset.o  \
@@ -83,7 +84,8 @@ LCATAOF=$(LCATAODIR)/cat.o \
 	$(LCATAODIR)/dynmem.o \
 	$(LCATAODIR)/lex.o \
 	$(LCATAODIR)/sort.o \
-	$(LCATAODIR)/optparse.o
+	$(LCATAODIR)/optparse.o \
+	$(LCATODIR)/charport.o 
 
 
 LCAT_DBG_ODIR= ../obj/libcat_dbg
@@ -110,7 +112,7 @@ LCAT_DBG_OF=$(LCAT_DBG_ODIR)/cat.o \
 	$(LCAT_DBG_ODIR)/dbgmem.o  \
 	$(LCAT_DBG_ODIR)/emit.o  \
 	$(LCAT_DBG_ODIR)/emit_format.o  \
-	$(LCAT_DBG_ODIR)/stdemit.o  \
+	$(LCAT_DBG_ODIR)/stdclio.o  \
 	$(LCAT_DBG_ODIR)/emalloc.o  \
 	$(LCAT_DBG_ODIR)/catstr.o  \
 	$(LCAT_DBG_ODIR)/bitset.o  \
@@ -129,7 +131,8 @@ LCAT_DBG_OF=$(LCAT_DBG_ODIR)/cat.o \
 	$(LCAT_DBG_ODIR)/dynmem.o \
 	$(LCAT_DBG_ODIR)/lex.o \
 	$(LCAT_DBG_ODIR)/sort.o \
-	$(LCAT_DBG_ODIR)/optparse.o
+	$(LCAT_DBG_ODIR)/optparse.o \
+	$(LCATODIR)/charport.o 
 	
 
 LCAT_NO_LIBC_ODIR=  ../obj/libcat_nolibc
@@ -154,7 +157,7 @@ LCAT_NO_LIBC_OF= \
 	$(LCAT_NO_LIBC_ODIR)/dbgmem.o  \
 	$(LCAT_NO_LIBC_ODIR)/emit.o  \
 	$(LCAT_NO_LIBC_ODIR)/emit_format.o  \
-	$(LCAT_NO_LIBC_ODIR)/stdemit.o  \
+	$(LCAT_NO_LIBC_ODIR)/stdclio.o  \
 	$(LCAT_NO_LIBC_ODIR)/emalloc.o  \
 	$(LCAT_NO_LIBC_ODIR)/catstr.o  \
 	$(LCAT_NO_LIBC_ODIR)/bitset.o  \
@@ -171,7 +174,8 @@ LCAT_NO_LIBC_OF= \
 	$(LCAT_NO_LIBC_ODIR)/dynmem.o \
 	$(LCAT_NO_LIBC_ODIR)/lex.o \
 	$(LCAT_NO_LIBC_ODIR)/sort.o \
-	$(LCAT_NO_LIBC_ODIR)/optparse.o
+	$(LCAT_NO_LIBC_ODIR)/optparse.o \
+	$(LCATODIR)/charport.o 
 
 ICOMMON=$(ISYSTEM) -I../include
 
