--- a/src/Makefile.tmpl
+++ b/src/Makefile.tmpl
@@ -3,7 +3,7 @@ CFILES=	cat.c aux.c err.c cb.c grow.c io.c mem.c net.c pack.c ring.c pcache.c \
 	str.c dbgmem.c emit.c emit_format.c stdclio.c emalloc.c catstr.c \
 	bitops.c list.c hash.c avl.c heap.c dlist.c pool.c rbtree.c time.c \
 	splay.c bitset.c catstdlib.c catstdio.c pspawn.c dynmem.c lex.c sort.c \
-	optparse.c inport.c crypto.c
+	optparse.c inport.c crypto.c socks5.c
 
 LCATODIR=  ../obj/libcat
 LCATOF= $(LCATODIR)/cat.o \
@@ -39,7 +39,9 @@ LCATOF= $(LCATODIR)/cat.o \
 	$(LCATODIR)/sort.o \
 	$(LCATODIR)/optparse.o \
 	$(LCATODIR)/inport.o \
-	$(LCATODIR)/crypto.o
+	$(LCATODIR)/crypto.o \
+	$(LCATODIR)/socks5.o
+
 
 
 LCATAODIR=  ../obj/libcata
@@ -87,7 +89,8 @@ LCATAOF=$(LCATAODIR)/cat.o \
 	$(LCATAODIR)/sort.o \
 	$(LCATAODIR)/optparse.o \
 	$(LCATAODIR)/inport.o \
-	$(LCATAODIR)/crypto.o 
+	$(LCATAODIR)/crypto.o \
+	$(LCATAODIR)/socks5.o 
 
 
 LCAT_DBG_ODIR= ../obj/libcat_dbg
@@ -135,7 +138,8 @@ LCAT_DBG_OF=$(LCAT_DBG_ODIR)/cat.o \
 	$(LCAT_DBG_ODIR)/sort.o \
 	$(LCAT_DBG_ODIR)/optparse.o \
 	$(LCAT_DBG_ODIR)/inport.o  \
-	$(LCAT_DBG_ODIR)/crypto.o 
+	$(LCAT_DBG_ODIR)/crypto.o \
+	$(LCAT_DBG_ODIR)/socks5.o 
 	
 
 LCAT_NO_LIBC_ODIR=  ../obj/libcat_nolibc
@@ -179,7 +183,8 @@ LCAT_NO_LIBC_OF= \
 	$(LCAT_NO_LIBC_ODIR)/sort.o \
 	$(LCAT_NO_LIBC_ODIR)/optparse.o \
 	$(LCAT_NO_LIBC_ODIR)/inport.o \
-	$(LCAT_NO_LIBC_ODIR)/crypto.o 
+	$(LCAT_NO_LIBC_ODIR)/crypto.o \
+	$(LCAT_NO_LIBC_ODIR)/socks5.o 
 
 ICOMMON=$(ISYSTEM) -I../include
 
