Fix nolibc variant of the library so it properly links.

--- a/src/Makefile.tmpl
+++ b/src/Makefile.tmpl
@@ -150,6 +150,7 @@ LCAT_NO_LIBC_OF= \
 	$(LCAT_NO_LIBC_ODIR)/aux.o  \
 	$(LCAT_NO_LIBC_ODIR)/err.o  \
 	$(LCAT_NO_LIBC_ODIR)/cb.o  \
+	$(LCAT_NO_LIBC_ODIR)/grow.o  \
 	$(LCAT_NO_LIBC_ODIR)/io.o  \
 	$(LCAT_NO_LIBC_ODIR)/mem.o  \
 	$(LCAT_NO_LIBC_ODIR)/pack.o  \
@@ -184,6 +185,7 @@ LCAT_NO_LIBC_OF= \
 	$(LCAT_NO_LIBC_ODIR)/optparse.o \
 	$(LCAT_NO_LIBC_ODIR)/inport.o \
 	$(LCAT_NO_LIBC_ODIR)/crypto.o \
+	$(LCAT_NO_LIBC_ODIR)/bitops.o \
 	$(LCAT_NO_LIBC_ODIR)/socks5.o 
 
 ICOMMON=$(ISYSTEM) -I../include
